.omo/evidence/task-14-clippy.txt
[1m[92m    Checking[0m puread-android v0.1.0 (/root/Projects/Ling/PureADRemoverModule/crates/puread-android)
[1m[91merror[E0432][0m[1m: unresolved import `puread_android::file_actions`[0m
 [1m[94m--> [0mcrates/puread-android/tests/file_actions.rs:8:21
  [1m[94m|[0m
[1m[94m8[0m [1m[94m|[0m use puread_android::file_actions::{
  [1m[94m|[0m                     [1m[91m^^^^^^^^^^^^[0m [1m[91mcould not find `file_actions` in `puread_android`[0m

[1m[91merror[E0432][0m[1m: unresolved import `puread_android::sqlite_actions`[0m
  [1m[94m--> [0mcrates/puread-android/tests/sqlite_actions.rs:11:21
   [1m[94m|[0m
[1m[94m11[0m [1m[94m|[0m use puread_android::sqlite_actions::{
   [1m[94m|[0m                     [1m[91m^^^^^^^^^^^^^^[0m [1m[91mcould not find `sqlite_actions` in `puread_android`[0m

[1m[91merror[E0433][0m[1m: cannot find `file_actions` in `puread_android`[0m
   [1m[94m--> [0mcrates/puread-android/tests/file_actions.rs:230:29
    [1m[94m|[0m
[1m[94m230[0m [1m[94m|[0m ) -> Result<puread_android::file_actions::FileActionPlan, Box<dyn Error>> {
    [1m[94m|[0m                             [1m[91m^^^^^^^^^^^^[0m [1m[91mcould not find `file_actions` in `puread_android`[0m

[1mFor more information about this error, try `rustc --explain E0432`.[0m
[1m[91merror[0m: could not compile `puread-android` (test "sqlite_actions") due to 1 previous error
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
[1mSome errors have detailed explanations: E0432, E0433.[0m
[1mFor more information about an error, try `rustc --explain E0432`.[0m
[1m[91merror[0m: could not compile `puread-android` (test "file_actions") due to 2 previous errors
